[gd_scene format=3 uid="uid://bvo08cjvwj8vd"]

[ext_resource type="Script" uid="uid://chvp6cpp88t5m" path="res://Scenes/Main/Main.gd" id="1_cmk6n"]
[ext_resource type="FontFile" uid="uid://347obxqunqpm" path="res://Assets/Fonts/Kenney Thick.ttf" id="1_qtv3y"]
[ext_resource type="FontFile" uid="uid://7s05uwtke4wa" path="res://Assets/Fonts/Kenney Pixel.ttf" id="2_cmk6n"]
[ext_resource type="FontFile" uid="uid://v3mtoegrwmj0" path="res://Assets/Fonts/Kenney Mini.ttf" id="4_i3fi7"]
[ext_resource type="AudioStream" uid="uid://dcsyvcuybr1ys" path="res://Assets/Music/2018 Clement Panchout Shooting on Sight PRE FIGHT LOOP.wav" id="5_o8wgc"]

[sub_resource type="LabelSettings" id="LabelSettings_i3fi7"]
font = ExtResource("1_qtv3y")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_cmk6n"]
font_size = 23

[sub_resource type="LabelSettings" id="LabelSettings_o8wgc"]
font = ExtResource("2_cmk6n")
font_size = 60

[sub_resource type="LabelSettings" id="LabelSettings_w20t6"]
font = ExtResource("4_i3fi7")
font_size = 13

[sub_resource type="Animation" id="Animation_w20t6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect/MarginContainer/VBoxContainer/TitleLabel:label_settings:font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect/MarginContainer/VBoxContainer/PSLabel:label_settings:font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnterSprite2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cmk6n"]
resource_name = "press_enter"
length = 2.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect/MarginContainer/VBoxContainer/PSLabel:label_settings:font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.95, 1.05, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnterSprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.95, 1.05, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_aw1lf"]
resource_name = "title"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect/MarginContainer/VBoxContainer/TitleLabel:label_settings:font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1, 50, 100, 150]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5s61s"]
_data = {
&"RESET": SubResource("Animation_w20t6"),
&"press_enter": SubResource("Animation_cmk6n"),
&"title": SubResource("Animation_aw1lf")
}

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_cmk6n"]
load_path = "res://.godot/imported/tilemap_white_packed.png-53641939dabcd364935c2e6e82247279.ctex"

[node name="Main" type="Control" unique_id=1576980231]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cmk6n")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1191758590]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.09019608, 0, 0.5686275)

[node name="TextureRect" type="TextureRect" parent="." unique_id=466751733]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="TextureRect" unique_id=71009706]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer" unique_id=247548288]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TitleLabel" type="Label" parent="TextureRect/MarginContainer/VBoxContainer" unique_id=199788039]
layout_mode = 2
size_flags_horizontal = 4
text = "SURVIVE"
label_settings = SubResource("LabelSettings_i3fi7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="spacelabel1" type="Label" parent="TextureRect/MarginContainer/VBoxContainer" unique_id=1677464072]
layout_mode = 2
text = "
"
label_settings = SubResource("LabelSettings_cmk6n")

[node name="PSLabel" type="Label" parent="TextureRect/MarginContainer/VBoxContainer" unique_id=617171563]
layout_mode = 2
text = "Press \"Enter\" to start"
label_settings = SubResource("LabelSettings_o8wgc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicCreditLabel" type="Label" parent="TextureRect/MarginContainer" unique_id=749117251]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Music by Clement Panchout â€“ www.clementpanchout.com"
label_settings = SubResource("LabelSettings_w20t6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1043952315]
libraries/ = SubResource("AnimationLibrary_5s61s")
autoplay = &"title"

[node name="EnterSprite2D" type="Sprite2D" parent="." unique_id=1429290059]
position = Vector2(611, 550)
scale = Vector2(2, 2)
texture = SubResource("CompressedTexture2D_cmk6n")
region_enabled = true
region_rect = Rect2(511.79965, 31.403625, 31.12381, 31.68465)

[node name="LobbyMusic" type="AudioStreamPlayer" parent="." unique_id=1892664679]
stream = ExtResource("5_o8wgc")
volume_db = -8.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="finished" from="LobbyMusic" to="." method="_on_lobby_music_finished"]
